# daydream

./: .env.example  .gitignore  CONTRIBUTING.md  DESIGN.md  FUTURE_UI_UX_ENHANCEMENTS.md  OPEN_WEBUI_INTEGRATION.md  README.md  ROADMAP.md  TECHNICAL_ENHANCEMENTS.md  app.py  app_state.yaml  awl_definitions.json  design_document.docx  dummy_credentials.json  lore.py  lore_vocabulary.json  premade_characters.json  pyproject.toml  requirements.txt  run.py  seed.sh  seed_persona_quiz.py  setup.sh  test.sh  vocabulary.py
daydream/: __init__.py  creator_cockpit.py  lore.py  main_menu.py  quests.py  settings.py  state_manager.py  system_diagnostics.py  tool_handlers.py  utils.py  vocabulary.py
daydream-rust/daydream-rust/: Cargo.toml
daydream.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
daydream/api/: routes.py
daydream/auth/: __init__.py  routes.py
daydream/character/: __init__.py  routes.py
daydream/data/: default_vocab.json  thetopia_lore.json
daydream/eoc/: __init__.py  routes.py
daydream/ethics/: __init__.py  gateway.py  licensing.py
daydream/game/: __init__.py  routes.py
daydream/journal/: __init__.py  routes.py
daydream/mentor/: __init__.py  routes.py
docs/: WIKI_HOME.md
flake8-report/: app.report.html  app.source.html  index.html
templates/: base.html  comprehension_check.html  journal_char_quest.html  journal_vocab_report.html  login.html  profile.html  signup.html
tests/: conftest.py  test_archetype_quiz.py  test_auth.py  test_character.py  test_factory.py  test_mentor.py  test_persona.py  test_vocab_bank.py  test_vocabulary.py
(+39 files in other folders)
