[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "daydream"
version = "0.1.0"
description = "A narrative-driven game application."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Framework :: Flask",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/user/daydream" # Placeholder
"Bug Tracker" = "https://github.com/user/daydream/issues" # Placeholder
